edit for sustainable it

--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ h5, .small-categorie h3 {
 	list-style-image: url('images/puces/tomato.png');
 }
 
-.licence, .syngenta, .axa, .datascience {
+.licence, .syngenta, .axa, .datascience, .fdn {
 	list-style-image: url('images/puces/chip.png');
 }
 
